[project]
name = "jwc"
version = "0.3.0"
description = "将某校教务平台的课表转为 ICS 日历"
authors = [
    {name = "Zjl37", email = "2693911885@qq.com"},
]
dependencies = [
    "ics>=0.7.2",
    "click>=8.1.7",
    "requests>=2.32.3",
    "pandas>=2.2.2",
    "odfpy>=1.4.1",
    "openpyxl>=3.1.5",
    "xlrd>=2.0.1",
    "beautifulsoup4>=4.12.3",
    "html5lib>=1.1",
    "textual-image>=0.7.0",
    "cryptography>=44.0.2",
    "fake-useragent>=2.1.0",
    "idshit @ file:///${PROJECT_ROOT}/../idshit",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "GPLv3"}


[tool.pdm]
distribution = true

[project.scripts]
jwc = "jwc.cli:cli"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
line-length = 90

[tool.ruff.lint]
ignore = ["F541"]
