[project]
name = "jwc"
version = "0.3.0"
description = "将某校教务平台的课表转为 ICS 日历"
authors = [
    {name = "Zjl37", email = "2693911885@qq.com"},
]
dependencies = [
    "ics>=0.7.2",
    "click>=8.1.8",
    "requests>=2.32.3",
    "pandas>=2.2.3",
    "odfpy>=1.4.1",
    "openpyxl>=3.1.5",
    "xlrd>=2.0.1",
    "beautifulsoup4>=4.13.4",
    "html5lib>=1.1",
    "textual-image>=0.8.2",
    "cryptography>=44.0.3",
    "fake-useragent>=2.2.0",
    "idshit @ git+https://github.com/Zjl37/idshit.py.git",
    "pydantic>=2.11.7",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "GPLv3"}


[tool.pdm]
distribution = true

[project.scripts]
jwc = "jwc.cli:cli"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
line-length = 90

[tool.ruff.lint]
ignore = ["F541"]
